# compile_time_state_machine

./: CMakeLists.txt  readme.md
ctsm/: state_machine.hpp
ctsm/types/: machne_concepts.hpp  transition.hpp  typelist.hpp  utilities.hpp
examples/: CMakeLists.txt  explicit_transitions.cpp  implicit_transitions.cpp  set_static_properties.cpp  simple.cpp
